# MEP00-Texture-old

./: .gitignore  .gitmodules  CMakeLists.txt  FP000 - Texture.jucer  MEP00 - Texture.jucer  README.md  mypy.ini
Source/: PluginAssets.h  PluginEditor.cpp  PluginEditor.h  PluginGlobals.cpp  PluginGlobals.h  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h  version.h
Source/Components/: MainGraphic.cpp  MainGraphic.h  MainView.cpp  MainView.h  Ribbon.cpp  Ribbon.h  StatusBar.cpp  StatusBar.h  TitleBar.cpp  TitleBar.h
src/: PluginEditor.cpp  PluginEditor.h  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h
